Fixed popover to stay open until user focus outside of field. Also did some refactoring to css files and some js cleanup

--- a/app/views/form_section/_textarea.html.erb
+++ b/app/views/form_section/_textarea.html.erb
@@ -20,7 +20,9 @@
               title: t('buttons.guiding_questions'), 
               html: true 
             }) %>
-      <div class='popover_content' style="display:none;"><%=  textarea.guiding_questions %></div>
+      <div class='popover_content' style="display:none;">
+        <%=  textarea.guiding_questions %>
+      </div>
     <% end %>
   </div>
 </div>
