--- a/app/views/form_section/edit.html.erb
+++ b/app/views/form_section/edit.html.erb
@@ -3,7 +3,7 @@
     <%
        #TODO i18n and STYLE
     %>
-    <h4><%= "Form > #{@form_section.parent_form.humanize} > #{t(@form_section.unique_id, :default => @form_section.name)}"%></h4>
+    <h4><%= t("form_section.label") + " > #{@form_section.parent_form.humanize} > #{t(@form_section.unique_id, :default => @form_section.name)}"%></h4>
   </div>
   <div class="large-4 medium-4 columns">
   </div>
