--- a/app/views/form_section/index.html.erb
+++ b/app/views/form_section/index.html.erb
@@ -3,7 +3,7 @@
     <%
        #TODO i18n and STYLE
     %>
-    <h4><%= "Forms > #{@primero_module.name} > #{@parent_form.titleize}"%></h4>
+    <h4><%= t("forms.label") + " > #{@primero_module.name} > #{@parent_form.titleize}"%></h4>
   </div>
   <div class="large-4 medium-4 columns">
       <%= link_to content_tag(:span, t("form_section.create"), class: 'create_user'), new_form_section_path({module_id: @module_id, parent_form: @parent_form}),  class: 'btn green-button' %>
