PRIMERO-490 add date to Flag feature.
1. Added app/models/concerns/flagable.rb to include the flag functionality in Incident and TrancingRequest.
2. Added date field to the flag dialog box and model.
3. refactoring _mark_as.html.erb to be reusable for Incident and TracingRequest.
4. Added capybara test cases.
5. Added app/views/tracing_requests/_export.html.erb because was missed and break tracing request.

--- a/app/views/children/_show_child_toolbar.html.erb
+++ b/app/views/children/_show_child_toolbar.html.erb
@@ -23,7 +23,7 @@
     <% end %>
     <li>
         <div class="dropdown_btn dropdown_form">
-            <%= render 'suspect_flag', child: @child %>
+            <%= render 'record_shared/suspect_flag', record: @child %>
         </div>
     </li>
 <% end %>
