--- a/app/views/incidents/_show_incident_toolbar.html.erb
+++ b/app/views/incidents/_show_incident_toolbar.html.erb
@@ -20,12 +20,12 @@
             <%= render 'reunited', incident: @incident %>
         </div>
     </li>
+    <% end %>
     <li>
         <div class="dropdown_btn dropdown_form">
-            <%= render 'suspect_flag', incident: @incident %>
+            <%= render 'record_shared/suspect_flag', record: @incident %>
         </div>
     </li>
-    <% end %>
 <% end %>
 <% if Exporters::ACTIVE_EXPORTERS.any?{|exporter| can?("export_#{exporter.id}".to_sym, incident)} %>
     <li>
