--- a/app/views/tracing_requests/_show_tracing_request_toolbar.html.erb
+++ b/app/views/tracing_requests/_show_tracing_request_toolbar.html.erb
@@ -20,12 +20,12 @@
             <%= render 'reunited', tracing_request: @tracing_request %>
         </div>
     </li>
+    <% end %>
     <li>
         <div class="dropdown_btn dropdown_form">
-            <%= render 'suspect_flag', tracing_request: @tracing_request %>
+            <%= render 'record_shared/suspect_flag', record: @tracing_request %>
         </div>
     </li>
-    <% end %>
 <% end %>
 <% if can?(:export, tracing_request) %>
     <li>
