--- a/app/assets/stylesheets/primero/button.scss
+++ b/app/assets/stylesheets/primero/button.scss
@@ -57,27 +57,30 @@
 .mark-as-form {
     padding: .3rem;
 
-    h3{
-      margin: 0px 5px;
-      label {
-        font-weight: bold;
-      }
-    }
-
-    input[type="text"]{
-      margin: .3rem 0 .5rem .3rem;
-      width: 20rem !important;
-      height: 2rem;
-      float: left;
-      border-right: none;
-    }
-
-    .mark-as-submit {
-      margin: .3rem .3rem .5rem 0;
+    div.field {
       width: auto;
-      height: 2rem;
-      padding: .5rem;
+      display: inline-block;
       float: left;
-      border-left: none;
+      margin: .3rem 0 .5rem .3rem;
+      position: relative;
+
+      h3 {
+        margin: 0px 5px;
+        label {
+          font-weight: bold;
+        }
+      }
+
+      input[type="text"] {
+        height: 2rem;
+        float: left;
+      }
+
+      .mark-as-submit {
+        width: auto;
+        height: 2rem;
+        position: relative;
+        top: 20px;
+      }
     }
 }
