--- a/app/views/record_shared/_incidents_summary_row.html.erb
+++ b/app/views/record_shared/_incidents_summary_row.html.erb
@@ -1,5 +1,8 @@
 <tr>
-  <td id="child_<%= record.id %>" class="id_column">
+  <td>
+    <%= icon('flag', '', class: 'flagged') if record.flag? %>
+  </td>
+  <td id="incident_<%= record.id %>" class="id_column">
       <%= link_to text_to_identify_incident(record), incident_path(record), class: 'id_link' %>
       <% #content_tag(:div, nil, :class => 'flag reunited') if record.reunited? %>
   </td>
