--- a/app/views/tracing_requests/edit.html.erb
+++ b/app/views/tracing_requests/edit.html.erb
@@ -13,7 +13,7 @@
 <% content_for :header_message do %>    
     <% if @tracing_request.flag? %>
         <div class="header_message">
-        <h3 class="flag-message"><%= flag_message%></h3>
+        <h3 class="flag-message"><%= @tracing_request.flagged_by %></h3>
         </div>
     <% end %>
 <% end %>
