Grouped violation totals, and added more styling and cleanup.

--- a/app/assets/stylesheets/primero/button.scss
+++ b/app/assets/stylesheets/primero/button.scss
@@ -37,6 +37,11 @@
   text-decoration: none !important;
 }
 
+.import_button {
+  width: 200px; 
+  float: right;
+}
+
 ////////////////////////////////////////////////
 // Dropdown Buttons
 ////////////////////////////////////////////////
