--- a/app/assets/stylesheets/primero/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/primero/foundation_and_overrides.scss
@@ -66,6 +66,7 @@ $nav_height: 50px;
 $topbar-height: $nav_height;
 $topbar-link-color: #fff !important;
 $topbar-bg-color: $grey_color;
+$topbar-link-color-hover: $green_color !default;
 
 
 ////////////////////////////////////////////////
