--- a/app/views/children/_cases_filter.html.erb
+++ b/app/views/children/_cases_filter.html.erb
@@ -45,18 +45,19 @@
       <div class="filter-controls">
         <div class="row">
           <div class="medium-2 columns">
-            <label>From</label>
+            <label class="has_date">From</label>
           </div>
           <div class="medium-10 columns">
-            <input type="text" id="registration_date" class="form_date_field" name="registration_date" />
+            <input type="text" id="registration_date_to" class="form_date_field" name="registration_date" />
           </div>
         </div>
+        <br>
         <div class="row">
           <div class="medium-2 columns">
-            <label>To</label>
+            <label class="has_date">To</label>
           </div>
           <div class="medium-10 columns">
-            <input type="text" id="registration_date" class="form_date_field" name="registration_date" />
+            <input type="text" id="registration_date_from" class="form_date_field" name="registration_date" />
           </div>
         </div>
       </div>
