--- a/app/views/record_shared/_imports.erb
+++ b/app/views/record_shared/_imports.erb
@@ -3,11 +3,13 @@
   <span class="import"><%= t("buttons.import") %></span>
 </div>
 
-<div id="import-modal" class="reveal-modal" data-reveal>
+<div id="import-modal" class="reveal-modal tiny" data-reveal>
   <%= form_tag(url_for(:action => 'import_file'), {:multipart => true, :method => 'post'}) do %>
     <%= file_field_tag("import_file") %>
     <%= select_tag("import_type", options_for_select(Importers::ACTIVE_IMPORTERS.map {|i| i.id}, 'csv')) %>
-    <%= submit_tag("Import") %>
+    <div class="import_button">
+      <%= submit_tag("Import", class: 'green-button right') %>
+    </div>
     <%= javascript_tag defer: 'defer' do %>
       $('#import_file').on('change', function(e) {
         var file_ext = e.target.value.split('.').pop()
