--- a/app/views/record_shared/_list_view_table.html.erb
+++ b/app/views/record_shared/_list_view_table.html.erb
@@ -1,7 +1,7 @@
 <div class="index_controls_container" data-top="50" data-bottom="40">
-  <div class="row">
+  <div class="row collapse">
     <div class="large-9 columns">
-      <div class="row">
+      <div class="row collapse">
         <div class="large-6 columns">
           <div class="pagination_info"><%= page_entries_info collection %></div>
         </div>  
@@ -14,7 +14,7 @@
     </div>  
   </div>
 </div>
-<div class="row">
+<div class="row collapse">
   <div class="large-9 columns">
     <div class="clearfix"></div>
 
