--- a/app/views/record_shared/_create_button.html.erb
+++ b/app/views/record_shared/_create_button.html.erb
@@ -5,7 +5,10 @@
         <ul id="modules-dropdown" class="f-dropdown" data-dropdown-content>
         <% modules.each do |primero_module| %>
             <%# TODO: translate the module name %>
-            <li><%= link_to primero_module.name, new_polymorphic_path(record, module_id: primero_module.id) %></li>
+            <%# Temp hiding of GBV form link for build %>
+            <% unless primero_module.name == 'GBV' %>
+                <li><%= link_to primero_module.name, new_polymorphic_path(record, module_id: primero_module.id) %></li>
+            <% end %>
         <% end %>
         </ul>
     <% elsif modules.size == 1 %>
