Temp hiding of GBV form on incident

--- a/app/views/record_shared/_create_button.html.erb
+++ b/app/views/record_shared/_create_button.html.erb
@@ -6,13 +6,13 @@
         <% modules.each do |primero_module| %>
             <%# TODO: translate the module name %>
             <%# Temp hiding of GBV form link for build %>
-            <% unless primero_module.name == 'GBV' %>
+            <% unless primero_module.name == 'GBV' && record == 'incident' %>
                 <li><%= link_to primero_module.name, new_polymorphic_path(record, module_id: primero_module.id) %></li>
             <% end %>
         <% end %>
         </ul>
     <% elsif modules.size == 1 %>
-        <% unless modules.first.name == 'GBV' %>
+        <% unless modules.first.name == 'GBV' && record == 'incident' %>
         <%= link_to content_tag(:span, button_label, class: 'create_user'), new_polymorphic_path(record, {module_id: modules.first.id}),  class: 'btn green-button right' %>
         <% end %>
     <% end %>
