--- a/app/views/children/edit.html.erb
+++ b/app/views/children/edit.html.erb
@@ -14,7 +14,7 @@
   <div class="panel">
     <div class="header_message">   
       <% if @child.flag? %>
-        <p class="flag-message"><%= @child.flagged_by %></p>
+        <p class="flag-message"><%= @child.flag_message_flagged_by %></p>
       <% end %>
     </div>
   </div>
