--- a/app/views/tracing_requests/edit.html.erb
+++ b/app/views/tracing_requests/edit.html.erb
@@ -14,7 +14,7 @@
   <div class="panel">
     <div class="header_message">
       <% if @tracing_request.flag? %>
-        <p class="flag-message"><%= @tracing_request.flagged_by %></p>
+        <p class="flag-message"><%= @tracing_request.flag_message_flagged_by %></p>
       <% end %>
     </div>
   </div>
