Hiding import button and aligning filters with index table

--- a/app/views/record_shared/_imports.erb
+++ b/app/views/record_shared/_imports.erb
@@ -1,4 +1,5 @@
-
+<%# Hiding imports for build %>
+<% if false %>
 <div class="btn green-button" data-reveal-id="import-modal">
   <span class="import"><%= t("buttons.import") %></span>
 </div>
@@ -21,3 +22,4 @@
     <% end %>
   <% end %>
 </div>
+<% end %>
