--- a/app/views/incidents/_show_incident_toolbar.html.erb
+++ b/app/views/incidents/_show_incident_toolbar.html.erb
@@ -28,7 +28,5 @@
     <% end %>
 <% end %>
   <li>
-      <div class="btn dropdown_btn btn_export">
-          <%= render 'export' %>
-      </div>
+    <%= render partial: 'exports/button', locals: {model: Incident, instance: @incident} %>
   </li>
