--- a/app/views/users/_users_table.html.erb
+++ b/app/views/users/_users_table.html.erb
@@ -2,6 +2,8 @@
   <% if can? :create,User %>
       <%= link_to content_tag(:span, t("users.create"), :class => 'create_user'), new_user_path, :class => 'btn green-button' %>
   <% end %>
+  <%= render 'exports/button' %>
+  <%= render 'imports/button' %>
 <% end %>
 <div class="row">
   <div class="large-12 columns">
