PRIMERO-514 Case List View - Changes to columns

--- a/app/views/children/_cases_filter.html.erb
+++ b/app/views/children/_cases_filter.html.erb
@@ -1,6 +1,7 @@
 <div class="title">Filter Cases By</div>
 <div class="panel">
   <form id="index_filter_form">
+    <% @scope = params["scope"] || {"child_status" => "open"} %>
     <%= build_filter_checkboxes('Flagged:', 'flag', [
       {flag: 'flagged?'}
     ]) %>
