--- a/app/views/record_shared/_list_view_table.html.erb
+++ b/app/views/record_shared/_list_view_table.html.erb
@@ -11,6 +11,9 @@
       </div>
     </div>
     <div class="large-3 columns">
+      <%# TODO: translate these %>
+      <div class="filter_title left">Filter:</div>
+      <%= link_to 'Apply Filter','', class: 'green-button right', id: 'apply_filter' %>
     </div>  
   </div>
 </div>
