--- a/app/views/form_section/_separator.html.erb
+++ b/app/views/form_section/_separator.html.erb
@@ -1,5 +1,8 @@
 <div class="row separator_field">
   <div class="large-12 columns separator" id="<%= separator.name %>">
     <span> <%= t(separator.name, :default => separator.display_name) %></span>
+    <% if separator.help_text.present? %>
+      <p class="help"><%= t(separator.help_text, :default => separator.help_text) %></p>
+    <% end %>
   </div>
 </div>
