--- a/app/views/record_shared/_cases_summary_row.html.erb
+++ b/app/views/record_shared/_cases_summary_row.html.erb
@@ -10,5 +10,5 @@
   <td><%= record.age %></td>
   <td><%= record.sex %></td>
   <td><%= record.created_at %></td>
-  <td><%= icon('picture-o') if record.photo_keys.present? %></td>
+  <td><%= icon('camera') if record.photo_keys.present? %></td>
 </tr>
