PRIMERO-491 add more than one flag to a record - backend: remove flag property.

--- a/app/views/children/_header_message.html.erb
+++ b/app/views/children/_header_message.html.erb
@@ -3,7 +3,7 @@
     <% if child.reunited? %>
       <div class="reunited-message"><%= reunited_message %></div>
     <% end %>
-    <% if child.flag? %>
+    <% if child.flagged? %>
       <p class="flag-message"><%= child.flag_message_flagged_by %></p>
     <% end %>
     <% if child.duplicate? %>
