--- a/app/views/children/_show_child_toolbar.html.erb
+++ b/app/views/children/_show_child_toolbar.html.erb
@@ -8,7 +8,7 @@
         Unlikely that we will put them back in. Delete the code in the future.
     %>
     <% if false %>
-    <% if @child.flag? %>
+    <% if @child.flagged? %>
         <li>
             <div class="dropdown_btn dropdown_form">
                 <%= render 'investigated', child: @child %>
