--- a/app/views/incidents/edit.html.erb
+++ b/app/views/incidents/edit.html.erb
@@ -13,7 +13,7 @@
 <% content_for :header_message do %>
   <div class="panel">
     <div class="header_message">
-    <% if @incident.flag? %>
+    <% if @incident.flagged? %>
       <p class="flag-message"><%= @incident.flag_message_flagged_by %></p>
     <% end %>
     </div>
