--- a/app/views/record_shared/_cases_summary_row.html.erb
+++ b/app/views/record_shared/_cases_summary_row.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td>
-    <%= icon('flag', '', class: 'flagged') if record.flag? %>
+    <%= icon('flag', '', class: 'flagged') if record.flagged? %>
   </td>
   <td id="child_<%= record.id %>" class="id_column">
       <%= link_to text_to_identify_child(record), case_path(record), class: 'id_link' %>
