--- a/app/views/record_shared/_tracing_requests_summary_row.html.erb
+++ b/app/views/record_shared/_tracing_requests_summary_row.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td>
-    <%= icon('flag', '', class: 'flagged') if record.flag? %>
+    <%= icon('flag', '', class: 'flagged') if record.flagged? %>
   </td>
   <td id="tracing_request_<%= record.id %>" class="id_column">
     <%= link_to text_to_identify_tracing_request(record), tracing_request_path(record), class: 'id_link' %>
