--- a/app/views/tracing_requests/_show_tracing_request_toolbar.html.erb
+++ b/app/views/tracing_requests/_show_tracing_request_toolbar.html.erb
@@ -8,7 +8,7 @@
         Unlikely that we will put them back in. Delete the code in the future.
     %>
     <% if false %>
-    <% if @tracing_request.flag? %>
+    <% if @tracing_request.flagged? %>
         <li>
             <div class="dropdown_btn dropdown_form">
                 <%= render 'investigated', tracing_request: @tracing_request %>
