--- a/app/views/tracing_requests/edit.html.erb
+++ b/app/views/tracing_requests/edit.html.erb
@@ -13,7 +13,7 @@
 <% content_for :header_message do %>
   <div class="panel">
     <div class="header_message">
-      <% if @tracing_request.flag? %>
+      <% if @tracing_request.flagged? %>
         <p class="flag-message"><%= @tracing_request.flag_message_flagged_by %></p>
       <% end %>
     </div>
